Manifest/Jellyseerr/JellyseerrDeployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyseerr
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  name: jellyseerr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - env:
            - name: TZ
              value: "America/Chicago"
          image: ghcr.io/fallenbagel/jellyseerr:latest
          imagePullPolicy: IfNotPresent
          name: jellyseerr
          ports:
            - containerPort: 5055
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr
              subPath: app/config
      volumes:
        - name: jellyseerr
          persistentVolumeClaim:
            claimName: jellyseerr
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyseerr
  name: jellyseerr
  namespace: jellyfin
spec:
  ports:
    - name: web-tcp
      port: 5055
      protocol: TCP
      targetPort: 5055
    - name: web-udp
      port: 5055
      protocol: UDP
      targetPort: 5055
  selector:
    app: jellyseerr
  #  externalTrafficPolicy: Cluster
  #  loadBalancerIP: 192.168.40.63
  type: ClusterIP #LoadBalancer

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.jellyseerr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
    - match: Host(`jellyseerr.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
      middlewares:
        - name: bouncer
          namespace: traefik
        #       - name: authentik-outpost
        - name: default-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
